packages/libtunepimp/include/tunepimp-0.5/tp_c.h


typedef void *tunepimp_t;
typedef void *track_t;
typedef void (*tp_notify_callback)(tunepimp_t pimp, void *data, TPCallbackEnum
type, int fileId, TPFileStatus status);
void	tp_SetMusicDNSClientId(tunepimp_t o, const char *clientId);
void       tp_GetMusicDNSClientId(tunepimp_t o, char *clientId, int maxClientIdLen);
void      tp_SetFileNameEncoding(tunepimp_t o, const char *encoding);
void tp_GetFileNameEncoding(tunepimp_t o, char *encoding, int maxEncodingLen);
void tp_SetNotifyCallback(tunepimp_t o, tp_notify_callback callback, void *data);
void      tp_GetFileIds            (tunepimp_t o, int *ids, int numIds);
track_t   tp_GetTrack             (tunepimp_t o, int fileId);
void      tp_ReleaseTrack          (tunepimp_t o, track_t track);
void      tp_Wake                  (tunepimp_t o, track_t track);
void      tp_Misidentified         (tunepimp_t o, int fileId);
void      tp_IdentifyAgain         (tunepimp_t o, int fileId);
int      tp_WriteTags             (tunepimp_t o, int *fileIds, int numFileIds);
void      tp_SetRenameFiles          (tunepimp_t o, int rename);
int tp_GetRenameFiles(tunepimp_t o);
void      tp_SetMoveFiles            (tunepimp_t o, int move);
int tp_GetMoveFiles(tunepimp_t o);
void      tp_SetWriteID3v1           (tunepimp_t o, int writeID3v1);
int tp_GetWriteID3v1(tunepimp_t o);
void      tp_SetWriteID3v2_3           (tunepimp_t o, int writeID3v2_3);
int tp_GetWriteID3v2_3(tunepimp_t o);
void      tp_SetID3Encoding           (tunepimp_t o, TPID3Encoding encoding);
TPID3Encoding tp_GetID3Encoding(tunepimp_t o);
void      tp_SetClearTags            (tunepimp_t o, int clearTags);
int tp_GetClearTags(tunepimp_t o);
void      tp_SetFileMask             (tunepimp_t o, const char *fileMask);
void tp_GetFileMask (tunepimp_t o, char *fileMask, int maxLen);
void      tp_SetVariousFileMask     (tunepimp_t o, const char *variousFileMask);
void tp_GetVariousFileMask (tunepimp_t o, char *variousFileMask, int maxLen);
void      tp_SetNonAlbumFileMask     (tunepimp_t o, const char *nonAlbumFileMask);
void tp_GetNonAlbumFileMask (tunepimp_t o, char *nonAlbumFileMask, int maxLen);
void tp_SetAllowedFileCharacters(tunepimp_t o, const char *allowedFileCharacters);
void tp_GetAllowedFileCharacters(tunepimp_t o, char *allowedFileCharacters, int maxLen);
void      tp_SetDestDir              (tunepimp_t o, const char *destDir);
void tp_GetDestDir(tunepimp_t o, char *destDir, int maxLen);
void      tp_SetTopSrcDir            (tunepimp_t o, const char *topSrcDir);
void tp_GetTopSrcDir(tunepimp_t o, char *topSrcDir, int maxLen);
void      tp_SetAutoSaveThreshold    (tunepimp_t o, int autoSaveThreshold);
int tp_GetAutoSaveThreshold(tunepimp_t o);
void tp_SetMaxFileNameLen(tunepimp_t o, int maxFileNameLen);
int tp_GetMaxFileNameLen(tunepimp_t o);
void tp_SetAutoRemovedSavedFiles(tunepimp_t o, int autoRemoveSavedFiles);
int tp_GetAutoRemovedSavedFiles(tunepimp_t o);
int tp_GetWinSafeFileNames(tunepimp_t o);
void tp_SetWinSafeFileNames(tunepimp_t o, int winSafeFileNames);