packages/libtunepimp/python/tunepimp/tunepimp.py


    tplib.tp_GetFileIds.argtypes = [c_void_p, c_void_p, c_int]
    def getFileIds(self):
        num = self.getNumFiles()
        arrayClass = c_int * num
        ids = arrayClass()
        tplib.tp_GetFileIds(self.tp, ids, num)
        ret = []
        for id in ids:
           ret.append(id)
        return ret

    tplib.tp_GetTrack.argtypes = [c_void_p, c_int]
    tplib.tp_GetTrack.restype = c_void_p
    def getTrack(self, id):
        tr = track.track(self, tplib.tp_GetTrack(self.tp, id))
        return tr

    tplib.tp_ReleaseTrack.argtypes = [c_void_p, c_void_p]
    def releaseTrack(self, tr):
        tplib.tp_ReleaseTrack(self.tp, tr.getTrackObject())

    tplib.tp_Wake.argtypes = [c_void_p, c_void_p]
    def wake(self, tr):
        tplib.tp_Wake(self.tp, tr.getTrackObject())

    tplib.tp_Misidentified.argtypes = [c_void_p, c_int]
    def misidentified(self, fileId):
        tplib.tp_Misidentified(self.tp, fileId)

    tplib.tp_IdentifyAgain.argtypes = [c_void_p, c_int]
    def identifyAgain(self, fileId):
        tplib.tp_IdentifyAgain(self.tp, fileId)

    tplib.tp_SetMusicDNSClientId.argtypes = [c_void_p, c_void_p, c_int]
    def writeTags(self, fileIds):
        num = len(fileIds)
        arrayClass = c_int * num
        ids = arrayClass()
        for i in xrange(num):
            ids[i] = fileIds[i] 

        return tplib.tp_WriteTags(self.tp, ids, num)

    tplib.tp_SetNotifyCallback.argtypes = [c_void_p, c_void_p, c_void_p]
    def setNotifyCallback(self, func):
        cb = self.NTFFUNC(func)
        self.funcs.append(cb)
        tplib.tp_SetNotifyCallback(self.tp, cb, None)

    tplib.tp_SetMusicDNSClientId.argtypes = [c_void_p, c_char_p]
    def setMusicDNSClientId(self, clientId):
        tplib.tp_SetMusicDNSClientId(self.tp, clientId)
        
    tplib.tp_GetMusicDNSClientId.argtypes = [c_void_p]
    def getMusicDNSClientId(self):
        return tplib.tp_GetMusicDNSClientId(self.tp)
        
    tplib.tp_SetRenameFiles.argtypes = [c_void_p, c_int]
    def setRenameFiles(self, rename):
        tplib.tp_SetRenameFiles(self.tp, rename)

    tplib.tp_GetRenameFiles.argtypes = [c_void_p]
    def getRenameFiles(self):
        return tplib.tp_GetRenameFiles(self.tp)
        
    tplib.tp_SetMoveFiles.argtypes = [c_void_p, c_int]
    def setMoveFiles(self, move):
        tplib.tp_SetMoveFiles(self.tp, move)

    tplib.tp_GetMoveFiles.argtypes = [c_void_p]
    def getMoveFiles(self):
        return tplib.tp_GetMoveFiles(self.tp)

    tplib.tp_SetFileNameEncoding.argtypes = [c_void_p, c_char_p]
    def setFileNameEncoding(self, encoding):
        tplib.tp_SetFileNameEncoding(self.tp, toUTF8(encoding))

    tplib.tp_GetFileNameEncoding.argtypes = [c_void_p, c_char_p, c_int]
    def getFileNameEncoding(self):
        encoding = c_buffer(self.BUFLEN)
        encodingLen = c_int(self.BUFLEN)
        tplib.tp_GetFileNameEncoding(self.tp, encoding, encodingLen)
        return unicode(encoding.value, "UTF-8", 'replace')

    tplib.tp_SetWriteID3v1.argtypes = [c_void_p, c_int]
    def setWriteID3v1(self, write):
        tplib.tp_SetWriteID3v1(self.tp, write)

    tplib.tp_GetWriteID3v1.argtypes = [c_void_p]
    def getWriteID3v1(self):
        return tplib.tp_GetWriteID3v1(self.tp)

    tplib.tp_SetWriteID3v2_3.argtypes = [c_void_p, c_int]
    def setWriteID3v2_3(self, write):
        tplib.tp_SetWriteID3v2_3(self.tp, write)

    tplib.tp_GetWriteID3v2_3.argtypes = [c_void_p]
    def getWriteID3v2_3(self):
        return tplib.tp_GetWriteID3v2_3(self.tp)

    tplib.tp_SetID3Encoding.argtypes = [c_void_p, c_int]
    def setID3Encoding(self, write):
        tplib.tp_SetID3Encoding(self.tp, write)

    tplib.tp_GetID3Encoding.argtypes = [c_void_p]
    def getID3Encoding(self):
        return tplib.tp_GetID3Encoding(self.tp)

    tplib.tp_SetClearTags.argtypes = [c_void_p, c_int]
    def setClearTags(self, clear):
        tplib.tp_SetClearTags(self.tp, clear)

    tplib.tp_GetClearTags.argtypes = [c_void_p]
    def getClearTags(self):
        return tplib.tp_GetClearTags(self.tp)

    tplib.tp_SetFileMask.argtypes = [c_void_p, c_char_p]
    def setFileMask(self, mask):
        tplib.tp_SetFileMask(self.tp, toUTF8(mask))

    tplib.tp_GetFileMask.argtypes = [c_void_p, c_char_p, c_int]
    def getFileMask(self):
        mask = c_buffer(self.BUFLEN)
        len = c_int(self.BUFLEN)
        tplib.tp_GetFileMask(self.tp, mask, len)
        return unicode(mask.value, "UTF-8", 'replace')

    tplib.tp_SetVariousFileMask.argtypes = [c_void_p, c_char_p]
    def setVariousFileMask(self, mask):
        tplib.tp_SetVariousFileMask(self.tp, toUTF8(mask))

    tplib.tp_GetVariousFileMask.argtypes = [c_void_p, c_char_p, c_int]
    def getVariousFileMask(self):
        mask = c_buffer(self.BUFLEN)
        len = c_int(self.BUFLEN)
        tplib.tp_GetVariousFileMask(self.tp, mask, len)
        return unicode(mask.value, "UTF-8", 'replace')

    tplib.tp_SetNonAlbumFileMask.argtypes = [c_void_p, c_char_p]
    def setNonAlbumFileMask(self, mask):
        tplib.tp_SetNonAlbumFileMask(self.tp, toUTF8(mask))

    tplib.tp_GetNonAlbumFileMask.argtypes = [c_void_p, c_char_p, c_int]
    def getNonAlbumFileMask(self):
        mask = c_buffer(self.BUFLEN)
        len = c_int(self.BUFLEN)
        tplib.tp_GetNonAlbumFileMask(self.tp, mask, len)
        return unicode(mask.value, "UTF-8", 'replace')

    tplib.tp_SetAllowedFileCharacters.argtypes = [c_void_p, c_char_p]
    def setAllowedFileCharacters(self, allowedChars):
        tplib.tp_SetAllowedFileCharacters(self.tp, toUTF8(allowedChars))

    tplib.tp_GetAllowedFileCharacters.argtypes = [c_void_p, c_char_p, c_int]
    def getAllowedFileCharacters(self):
        chrs = c_buffer(self.BUFLEN)
        len = c_int(self.BUFLEN)
        tplib.tp_GetAllowedFileCharacters(self.tp, chrs, len)
        return unicode(chrs.value, "UTF-8", 'replace')

    tplib.tp_SetWinSafeFileNames.argtypes = [c_void_p, c_int]
    def setWinSafeFileNames(self, value):
        tplib.tp_SetWinSafeFileNames(self.tp, value)

    tplib.tp_GetWinSafeFileNames.argtypes = [c_void_p]
    def getWinSafeFileNames(self):
        return tplib.tp_GetWinSafeFileNames(self.tp)

    tplib.tp_SetDestDir.argtypes = [c_void_p, c_char_p]
    def setDestDir(self, destDir):
        tplib.tp_SetDestDir(self.tp, toUTF8(destDir))

    tplib.tp_GetDestDir.argtypes = [c_void_p, c_char_p, c_int]
    def getDestDir(self):
        dir = c_buffer(self.BUFLEN)
        len = c_int(self.BUFLEN)
        tplib.tp_GetDestDir(self.tp, dir, len)
        return unicode(dir.value, "UTF-8", 'replace')

    tplib.tp_SetTopSrcDir.argtypes = [c_void_p, c_char_p]
    def setTopSrcDir(self, topSrcDir):
        tplib.tp_SetTopSrcDir(self.tp, toUTF8(topSrcDir))

    def getTopSrcDir(self):
        dir = c_buffer(self.BUFLEN)
        len = c_int(self.BUFLEN)
        tplib.tp_GetTopSrcDir(self.tp, dir, len)
        return unicode(dir.value, "UTF-8", 'replace')

    tplib.tp_SetAutoSaveThreshold.argtypes = [c_void_p, c_int]
    def setAutoSaveThreshold(self, thres):
        tplib.tp_SetAutoSaveThreshold(self.tp, thres)

    tplib.tp_GetAutoSaveThreshold.argtypes = [c_void_p]
    def getAutoSaveThreshold(self):
        return tplib.tp_GetAutoSaveThreshold(self.tp)

    tplib.tp_SetMaxFileNameLen.argtypes = [c_void_p, c_int]
    def setMaxFileNameLen(self, len):
        tplib.tp_SetMaxFileNameLen(self.tp, len)

    tplib.tp_GetMaxFileNameLen.argtypes = [c_void_p]
    def getMaxFileNameLen(self):
        return tplib.tp_GetMaxFileNameLen(self.tp)

    tplib.tp_SetAutoRemovedSavedFiles.argtypes = [c_void_p, c_int]
    def setAutoRemovedSavedFiles(self, autoRemove):
        tplib.tp_SetAutoRemovedSavedFiles(self.tp, autoRemove)

    tplib.tp_GetAutoRemovedSavedFiles.argtypes = [c_void_p]
    def getAutoRemovedSavedFiles(self):
        return tplib.tp_GetAutoRemovedSavedFiles(self.tp)

